# neomsn

./: CLAUDE.md  Cargo.toml
crates/neomsn-desktop/: Cargo.toml
crates/neomsn-desktop/src/: app.rs  main.rs  sound.rs
crates/neomsn-desktop/src/net/: http.rs  mod.rs  nmp.rs
crates/neomsn-desktop/src/screens/: chat.rs  contact_list.rs  login.rs  mod.rs
crates/neomsn-server/: Cargo.toml
crates/neomsn-server/src/: auth.rs  main.rs  state.rs
crates/neomsn-server/src/db/: migration.rs  mod.rs
crates/neomsn-server/src/db/entities/: contact.rs  device.rs  direct_conversation.rs  message.rs  message_chunk.rs  mod.rs  room.rs  room_member.rs  sync_cursor.rs  user.rs
crates/neomsn-server/src/http/: auth.rs  mod.rs  router.rs  ws.rs
crates/neomsn-server/src/nmp/: handlers.rs  listener.rs  mod.rs  session.rs
crates/neomsn-shared/: Cargo.toml
crates/neomsn-shared/src/: lib.rs
crates/neomsn-shared/src/domain/: contact.rs  message.rs  mod.rs  room.rs  user.rs
crates/neomsn-shared/src/proto/: frame.rs  mod.rs  opcodes.rs  payload.rs
crates/neomsn-shared/src/widgets/: buddy_icon.rs  chat_bubble.rs  contact_item.rs  emoji_picker.rs  mod.rs  msn_message.rs  status_dot.rs  theme.rs
